--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,7 @@ on:
       - "test/**.cpp"
 jobs:
   gcc-snapshot:
+    if: false
     strategy:
       matrix:
         config: ["Debug", "Release"]
@@ -25,3 +26,21 @@ jobs:
         env:
           CXXFLAGS: "-Wpedantic -Wall -Wextra"
           CMAKE_CONFIG_TYPE: "${{ matrix.config }}"
+  clang:
+    name: "Clang 12"
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: lukka/get-cmake@latest
+      - uses: actions/checkout@v2
+      - shell: bash
+        run: |
+          wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
+          sudo add-apt-repository "deb http://apt.llvm.org/focal/ llvm-toolchain-focal main"
+          sudo apt-get update
+          sudo apt-get install -y clang-12
+          echo "CXX=clang++-12" >> $GITHUB_ENV
+      - uses: johelegp/modern-cmake-buildsystem@v1
+        with:
+          generate-options: "--preset=test"
+        env:
+          CXXFLAGS: "-Wpedantic -Wall -Wextra"
